<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/nazwa"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="183dp"
        android:layout_marginStart="20dp"
        android:text="@string/user"
        android:textColor="@color/More_Dark_Red"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/e-mail_profil"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_above="@+id/phone_profil"
        android:layout_alignStart="@+id/nazwa"
        android:text="@string/email_p"
        android:textColor="@color/More_Dark_Red"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/phone_profil"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/phone_profil2"
        android:layout_toEndOf="@+id/nazwa"
        android:text="@string/phone_p"
        android:textColor="@color/More_Dark_Red"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/phone_profil2"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/nazwa"
        android:layout_marginBottom="82dp"
        android:text="@string/phone_ep"
        android:textColor="@color/More_Dark_Red"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/profil"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView4"
        android:layout_centerHorizontal="true"
        android:text="@string/PROFILE"
        android:textColor="@color/More_Dark_Red"
        android:textSize="30sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="156dp"
        android:layout_height="162dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="133dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/profil" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/ic_arrow_back_red" />

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="12dp"
        android:background="@android:color/black"
        android:text="@string/edit_data" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_alignTop="@+id/e-mail_profil"
        android:layout_toEndOf="@+id/nazwa"
        android:text="@string/email"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="170dp"
        android:layout_height="50dp"
        android:layout_above="@+id/e-mail_profil"
        android:layout_toEndOf="@+id/nazwa"
        android:text="@string/name"
        android:textSize="25sp" />


</RelativeLayout>