<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="299dp"
        android:layout_height="80dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="90dp"
        android:src="@drawable/sesame"
        android:contentDescription="@string/todo"/>

    <EditText
        android:id="@+id/register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_image"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_name"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/repeated_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/repeated_password"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="25sp" />

    <EditText
        android:id="@+id/register_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/register_email"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/numer_telefonu"
        android:inputType="phone"
        android:textAlignment="center"
        android:textSize="25sp" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/register_name"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@color/Black"
        android:text="@string/register"
        android:textSize="20sp" />

    <Button
        android:id="@+id/register_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/register_name"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@color/Black"
        android:text="@string/cancel"
        android:textSize="20sp" />
</RelativeLayout>