<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/profil_edit_text"
        android:layout_width="195dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:text="@string/EDIT_DATA"
        android:textColor="@color/More_Dark_Red"
        android:textSize="30sp"/>

    <ImageView
        android:layout_width="156dp"
        android:layout_height="162dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/profil_edit_text"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/editprofil" />

    <EditText
        android:id="@+id/edit_profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_above="@id/edit_profile_email"
        android:hint="@string/user_name"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textSize="25sp"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/edit_profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_above="@id/edit_profile_phone"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <EditText
        android:id="@+id/edit_profile_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="100dp"
        android:layout_marginEnd="20dp"
        android:hint="@string/numer_telefonu"
        android:inputType="phone"
        android:textAlignment="center"
        android:textSize="25sp"/>

    <Button
        android:id="@+id/edit_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/edit_profile_name"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@color/Black"
        android:text="@string/confirm"
        android:textSize="20sp" />

    <Button
        android:id="@+id/edit_profile_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/edit_profile_name"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:background="@color/Black"
        android:text="@string/cancel"
        android:textSize="20sp" />

</RelativeLayout>