<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChangePasswordActivity">

    <EditText
        android:id="@+id/editText2"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText6"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/stare_haslo"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/More_Dark_Red"
        android:textColorHint="@color/More_Dark_Red"
        android:textSize="25sp"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="183dp"
        android:hint="@string/repeat_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/More_Dark_Red"
        android:textColorHint="@color/More_Dark_Red"
        android:textSize="25sp"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editText6"
        android:layout_width="328dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editText3"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:hint="@string/new_password"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/More_Dark_Red"

        android:textColorHint="@color/More_Dark_Red"
        android:textSize="25sp"
        tools:ignore="LabelFor" />

    <Button
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/button5"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/Black"
        android:onClick="changePassword"
        android:text="@string/cancel"
        android:textColor="@color/More_Dark_Red"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/change_password"
        android:textColor="@color/More_Dark_Red"
        android:textSize="30sp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="160dp"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="73dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@color/Black"
        android:text="@string/confirm"
        android:textColor="@color/More_Dark_Red"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="70dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        app:srcCompat="@drawable/ic_arrow_back_red"
        android:onClick="back"
        android:contentDescription="@string/todo"/>

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="328dp"
        android:layout_height="121dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        app:srcCompat="@drawable/haslo"
        android:contentDescription="@string/todo"/>
</RelativeLayout>