<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/Maroon"
    tools:showIn="navigation_view">

    <EditText
        android:id="@+id/add_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textMultiLine"
        android:shadowColor="#ff8000"
        android:textAlignment="center"
        android:textColorHighlight="#ff8000"
        android:textColorHint="#ff8000" />

    <EditText
        android:id="@+id/add_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/add_title"
        android:ems="10"
        android:hint="@string/task"
        android:inputType="textMultiLine"
        android:shadowColor="#ff8000"
        android:textAlignment="center"
        android:textColor="#ff8000"
        android:textColorHighlight="#ff8000"
        android:textColorHint="#ff8000" />

    <EditText
        android:id="@+id/add_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:layout_below="@+id/add_task"
        android:hint="@string/location"
        android:inputType="textMultiLine"
        android:shadowColor="#ff8000"
        android:textAlignment="center"
        android:textColor="#ff8000"
        android:textColorHighlight="#ff8000"
        android:textColorHint="#ff8000" />

    <EditText
        android:id="@+id/add_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/add_location"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date"
        android:shadowColor="#ff8000"
        android:textAlignment="center"
        android:textColor="#ff8000"
        android:textColorHighlight="#ff8000"
        android:textColorHint="#ff8000" />

    <EditText
        android:id="@+id/add_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:layout_below="@+id/add_date"
        android:hint="@string/priority"
        android:inputType="textMultiLine"
        android:shadowColor="#ff8000"
        android:textAlignment="center"
        android:textColor="#ff8000"
        android:textColorHighlight="#ff8000"
        android:textColorHint="#ff8000" />

    <EditText
        android:id="@+id/add_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentStart="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_below="@+id/add_priority"
        android:ems="10"
        android:hint="@string/notes"
        android:inputType="textMultiLine"
        android:shadowColor="#ff8000"
        android:textAlignment="center"
        android:textColor="#ff8000"
        android:textColorHighlight="#ff8000"
        android:textColorHint="#ff8000" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="20dp"
        android:layout_below="@+id/add_notes"
        android:background="#ff0000"
        android:text="@string/confirm"
        android:textColor="@color/White"/>

    <Button
        android:id="@+id/add_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/add_notes"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:background="#ff0000"
        android:text="@string/cancel"
        android:textColor="@color/White"/>

</RelativeLayout>